fix: basic style changes for achievements + about pages. Tooltips re-centered & extra white space on cards removed

--- a/styles/achievements.module.css
+++ b/styles/achievements.module.css
@@ -28,7 +28,5 @@
   flex-wrap: wrap;
 }
 .txt_wrapper .achievement_card .individual_badge {
-  flex: 1 0 21%;
   display: contents;
-  flex-wrap: wrap;
 }/*# sourceMappingURL=achievements.module.css.map */
